GL/src/test/deca/syntax/invalid/deca_sans_objet/erreur_virgule.deca
// Description :
//  test erreur virgule
//
// Resultat :
// Erreur syntaxique
// Ligne 8 : caractère inattendu ','
{
    int a, ;
}
